--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --open"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -23,5 +23,10 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.14.0"
   }
 }
