--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
